dnl ----------------------------------
dnl Une bonne url :
dnl http://ac-archive.sourceforge.net/
dnl -----------------------------------

dnl -------------------------------
dnl  Fichier principal obligatoire
dnl -------------------------------

AC_INIT
AC_CONFIG_SRCDIR([configure.in])

dnl --------------------
dnl  Architecture et OS
dnl --------------------

AC_CANONICAL_TARGET([])

dnl -------------------
dnl  Numero de version
dnl -------------------

GLOMP_MAJOR_VERSION=0
GLOMP_MINOR_VERSION=1
GLOMP_REVISION=0
AM_INIT_AUTOMAKE(Glomp, $GLOMP_MAJOR_VERSION.$GLOMP_MINOR_VERSION.$GLOMP_REVISION)

dnl -------------------------
dnl  Header de configuration
dnl -------------------------

AM_CONFIG_HEADER(config.h)

dnl ------------------------
dnl  Recherche de programme
dnl ------------------------

AC_PROG_CC

AC_PROG_CPP

AC_PROG_INSTALL

AC_PROG_YACC

AC_PREREQ(2.52)

AC_CHECK_LIB(fl, yywrap)

# libtool versioning
LT_RELEASE=$GLOMP_MAJOR_VERSION.$GLOMP_MINOR_VERSION
LT_CURRENT=0
LT_REVISION=$GLOMP_REVISION
LT_AGE=0

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)


AM_PROG_LIBTOOL

dnl ---------------------
dnl  Recherche d'en-tete
dnl ---------------------

dnl En-tête standard
AC_HEADER_STDC

dnl En-tête pour le temps
AC_HEADER_TIME

dnl En-tête spécifique
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sched.h)
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_HEADERS(sys/sched.h)
AC_CHECK_HEADERS(GL/glx.h)
AC_CHECK_HEADERS(GL/gl.h)
AC_CHECK_HEADERS(GL/glext.h)

dnl ----------------------------------------------
dnl  Recherche de caractéristiques du compilateur
dnl ----------------------------------------------

dnl Support de const
AC_C_CONST

dnl Support d'inline
AC_C_INLINE

CFLAGS=" -I/usr/X11R6/include -I\$(top_srcdir)/include"
CXXFLAGS="$CFLAGS"

dnl Ajout de -Wall si les compilateurs sont GNU.
if test "x$GXX" = xyes; then
  CXXFLAGS="$CXXFLAGS -Wall"
fi

if test "x$GCC" = xyes; then
  CFLAGS="$CFLAGS -Wall"
fi

dnl ------------------------
dnl  Options de compilation 
dnl ------------------------

dnl ----------
dnl  Débugage
dnl ----------

AC_ARG_ENABLE(debug,
  [  --enable-debug             enable debugging [default=no]],
  enable_debug=$enableval, enable_debug=no)

if test "x$enable_debug" = xyes; then
  if test "x$GXX" = xyes; then
    CXXFLAGS="$CXXFLAGS -g -O0 -fno-inline -DDEBUG"
  fi
  if test "x$GCC" = xyes; then
    CFLAGS="$CFLAGS -g -O0 -fno-inline -DDEBUG"
  fi
dnl  LIBS="$LIBS -lefence"
else
  if test "x$GXX" = xyes; then
    CXXFLAGS="$CXXFLAGS -s"
  fi
  if test "x$GCC" = xyes; then
    CFLAGS="$CFLAGS -s"
  fi
fi

dnl ----------------------
dnl  Bibliothèques et cie
dnl ----------------------
LIBS="$LIBS -lpthread -ldl"


dnl -------------------
dnl  Makefiles a creer
dnl -------------------
AC_CONFIG_FILES([Makefile
		 generate/Makefile
  ])
AC_OUTPUT 


